alloy types imcompatibity because of multiple alloy versions, centralized crates versions in workspace

--- a/base/all_sol_types/Cargo.toml
+++ b/base/all_sol_types/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-alloy-contract = "*"
-alloy-sol-types = "*"
+alloy-sol-types.workspace = true
+alloy-contract.workspace = true
 serde = "1.0.228"
