--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 resolver = "3"
 members = [
   "./base/all_sol_types",
+  "./base/chains_data_json_rust",
+  "./base/cortex",
   "./base/shape",
   "./base/v3",
   "synapse",
@@ -10,15 +12,16 @@ members = [
 [workspace.dependencies]
 all_sol_types = { path = "./base/all_sol_types" }
 alloy = { version = "1.6.1", features = [
-  "contract",
   "provider-ws",
   "providers",
   "pubsub",
   "rpc-types",
-  "sol-types"
 ] }
+alloy-contract = "1.5.7"
 alloy-primitives = "1.3.1"
-chains_json = { git = "https://github.com/pdrdsnt/chains_data_json_rust" }
+alloy-sol-types = "1.5.7"
+chains_json = { path = "./base/chains_data_json_rust/" }
+cortex = { path = "./base/cortex/" }
 dashmap = "6.1.0"
 futures = "0.3.31"
 futures-util = "0.3"
